# BioFeaturisers

./: .gitignore  README.md  hello.py  pyproject.toml
biofeaturisers/: __init__.py  cli.py  config.py  env.py
biofeaturisers/core/: __init__.py  ensemble.py  features.py  output_index.py  pairwise.py  safe_math.py  switching.py  topology.py
biofeaturisers/hdx/: __init__.py  features.py  featurise.py  forward.py  hdxrate.py  predict.py
biofeaturisers/io/: __init__.py  formats.py  load.py  save.py
biofeaturisers/saxs/: __init__.py  debye.py  features.py  featurise.py  form_factors.py  forward.py  foxs.py  hydration.py  predict.py
blueprints/: HDX.md  SAXS.md
plans/: EXECUTION_SPEC.md  HDX.md  IMPLEMENTATION_WORKFLOW.md  SAXS.md  TODO.md  architecture.md  devices_execution.md  internal_benchmarking.md  pairwise.md  testing.md
tests/: conftest.py  test_cli.py  test_config.py  test_ensemble.py  test_env.py  test_hdx_featurise.py  test_hdx_forward.py  test_hdx_hdxrate.py  test_hdx_predict.py  test_pairwise.py  test_safe_math.py  test_switching.py  test_topology.py
tests/core/: test_ensemble.py  test_numerical_helpers.py  test_output_index.py  test_pairwise.py  test_safe_math.py  test_switching.py  test_topology.py
tests/fixtures/: __init__.py  biotite_builders.py  numerical_helpers.py
tests/gradients/: test_hdx_forward_gradients.py  test_saxs_forward_gradients.py
tests/hdx/: __init__.py  test_features_contract.py  test_featurise.py  test_hdx_forward.py  test_hdxrate.py  test_predict.py
tests/integration/: test_roundtrips.py
tests/io/: test_formats.py  (+1 more)
(+21 files in other folders)
